fix some pictures and video resource

--- a/emergency/allergy.html
+++ b/emergency/allergy.html
@@ -16,18 +16,19 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../emergency.html"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<h1 class="mui-title">过敏反应</h1>
 		</header>
 		<div class="mui-content">
 			<img style="height: auto;width:100%" src="../imgs/allergy.jpg"/>
 			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
 			<b>2</b>、观察到这些症状，立即拨打120。<br />
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
+			<b>3</b>、如果患者有过敏症，并且随身携带自动注射器，
 			请帮助他们使用。并且持续安慰患者，等待救护车抵达。
 			<hr />
-		了解更多
+		<a href="../home/allergy.html">了解更多</a>
 		<hr />
 		</div>
+		<script type="text/javascript" src="js/mui.min.js"></script>
 	</body>
 </html>
