--- a/emergency/asthma.html
+++ b/emergency/asthma.html
@@ -4,8 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="stylesheet" href="../css/mui.min.css">
 		<title>哮喘发作</title>
-		<link href="../css/mui.css" rel="stylesheet" />
 		<style>
 			p {
 				text-indent: 22px;
@@ -16,7 +18,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../emergency.html"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 
 			<h1 class="mui-title">哮喘发作</h1>
 		</header>
@@ -27,7 +29,7 @@
 			<b>2</b>、安抚患者。
 			<br />
 			<b>3</b>、如果哮喘加重，患者未带药物或服药后症状未缓解，请拨打120或请别人帮忙拨打120。
-			<hr /> 了解更多
+			<hr /> <a href="../home/asthma.html">了解更多</a>
 			<hr />
 		</div>
 	</body>
