--- a/emergency/bleeding.html
+++ b/emergency/bleeding.html
@@ -20,13 +20,13 @@
 			<h1 class="mui-title">出血</h1>
 		</header>
 		<div class="mui-content">
-			<video src="movie.ogg" controls="controls">
-</video>
+			<video src="../video/bleeding.mpeg" controls="controls">
+</video><br />
 			<b>1</b>、用周围能找到的任何物品按压伤口，以达到止血或减缓出血的目的。<br />
 			<b>2</b>、观察到这些症状，立即拨打120。或请别人帮忙拨打。</br>
 			<b>3</b>、持续按压伤口直到后续救援到达。
 			<hr />
-		了解更多
+		<a href="../home/bleeding.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
