--- a/emergency/diabetes.html
+++ b/emergency/diabetes.html
@@ -13,7 +13,6 @@
 			}
 		</style>
 	</head>
-
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../emergency.html"></a>
@@ -26,7 +25,7 @@
 			<b>3</b>、大多数人会逐渐缓解，但如果无法确定患者情况或者患者出现呼吸急促
 			、面色苍白、出汗或者意识丧失，请拨打120。
 			<hr />
-		了解更多
+		<a href="http://www.tangwowo.com/tnbhl/jjhl/17385.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
