--- a/emergency/fire.html
+++ b/emergency/fire.html
@@ -27,7 +27,7 @@
 			<b>3</b>、如有必要，请拨打120或者请他人帮助拨打。
 			请帮助他们使用。并且持续安慰患者，等待救护车抵达。
 			<hr />
-		了解更多
+		<a href="../home/fire.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
