--- a/emergency/heartattack.html
+++ b/emergency/heartattack.html
@@ -20,7 +20,7 @@
 			<h1 class="mui-title">心脏病发作</h1>
 		</header>
 		<div class="mui-content">
-			<img style="height: auto;width:100%" src="../imgs/heatattack.jpg"/>
+			<img style="height: auto;width:100%" src="../imgs/heartattack.jpg"/>
 			<b>1</b>、患者可能感觉到持续的压迫性胸痛，或者上臂、颈部、下颌、背部或者胃部出现难以描述的不适感。<br />
 			<b>2</b>、观察到这些症状，立即拨打120。<br />
 			<b>3</b>、让患者处于舒服的体位，例如坐在地板上，靠在墙上或椅子上。如果有阿司匹林并且患者不过敏，
@@ -29,7 +29,7 @@
 			<hr />
 		了解更多
 		<hr />
-		如果患者无意识了，该怎么办？
+		<a href="../home/unconcious.html">如果患者无意识了，该怎么办？</a>
 		</div>
 	</body>
 </html>
