--- a/emergency/heat.html
+++ b/emergency/heat.html
@@ -27,7 +27,7 @@
 			给患者扇风。如果患者意识清醒，可以让他喝少量水。但要让患者慢慢喝。<br />
 			<b>4</b>、如果需要，可用布包裹冰块或者冰袋，敷于患者的手腕，脚踝、腹股沟、颈部等处，帮助患者快速降温。
 			<hr />
-		了解更多
+		<a href="../home/severheat.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
