--- a/emergency/posioning.html
+++ b/emergency/posioning.html
@@ -20,14 +20,14 @@
 			<h1 class="mui-title">中毒</h1>
 		</header>
 		<div class="mui-content">
-			<img style="height: auto;width:100%" src="../imgs/posioning.jpg"/>
+			<img style="height: auto;width:100%" src="../imgs/posioning2.jpg"/>
 			<b>1</b>、了解患者服用了什么东西，什么时候服的，服了多少。<br />
 			<b>2</b>、尽快给急救中心打电话或请他人打电话。如果患者行为异常，
 			意识开始丧失，呼吸困难，拨打120。<br />
 			<b>3</b>、不要给患者催吐或者让他们喝水，除非有急救中心的建议。<br />
 			
 			<hr />
-		了解更多
+		<a href="../home/posioning.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
