--- a/emergency/strain.html
+++ b/emergency/strain.html
@@ -24,7 +24,7 @@
 			<b>1</b>、冷敷患处。<br />
 			<b>2</b>、如果情况没有缓解，应寻求医疗帮助。
 			<hr />
-		了解更多
+		<a href="../home/strain.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
