--- a/emergency/stroke.html
+++ b/emergency/stroke.html
@@ -25,7 +25,7 @@
 			说话时吐字表达清晰吗?时间(Time)：马上拨打120。<br />
 			<b>2</b>、等候救护车时，随时和患者说话，安抚他们。
 			<hr />
-		了解更多
+		<a href="../home/stroke.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
