--- a/emergency/unconcious.html
+++ b/emergency/unconcious.html
@@ -20,12 +20,12 @@
 			<h1 class="mui-title">意识丧失</h1>
 		</header>
 		<div class="mui-content">
-			<img style="height: auto;width:100%" src="../imgs/unconcious-emergency.jpg"/>
+			<img style="height: auto;width:100%" src="../imgs/concious.jpg"/>
 			<b>1</b>、让患者头部后仰，检查他是否有呼吸。<br />
 			<b>2</b>、若有呼吸，则参照无意识有自主呼吸急救指南。<br />
 			<b>3</b>、如果患者呼吸，则参照无意识无呼吸急救指南。<hr />
 			
-		了解更多
+		<a href="../home/unconcious.html">了解更多</a>
 		<hr />
 		</div>
 	</body>
