--- a/home/unconcious.html
+++ b/home/unconcious.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>无意识有自主呼吸</title>
-		<link href="../css/mui.css" rel="stylesheet" />
+		
+		<link rel="stylesheet" href="../css/mui.min.css">
 		<style>
 			p {
 				text-indent: 22px;
@@ -21,7 +22,7 @@
 		</header>
 		<div class="mui-content">
 			<img style="height: auto;width:100%" src="../imgs/unconcious.jpg"/>
-			<h4>1.是患者头部后仰通过观察和感觉，判断是否有呼吸</h4> 　　当患者出现意识丧失，此时肌肉松弛，舌堵塞气道，造成无法呼吸。
+			<h4>1.使患者头部后仰通过观察和感觉，判断是否有呼吸</h4> 　　当患者出现意识丧失，此时肌肉松弛，舌堵塞气道，造成无法呼吸。
 			<h4>2.让患者侧卧，头部后仰</h4>
 			<h4>3.尽快拨打120</h4>
 		<hr />
