--- a/home/unconcious2.html
+++ b/home/unconcious2.html
@@ -21,7 +21,7 @@
 		</header>
 		<div class="mui-content">
 			<h4>1.使患者的头部后仰观察是否有自主呼吸</h4> 　　
-			<h4>2.尽快拨打120。</h4>　　如果有自主呼吸，请参考无意识有自主呼吸的如果有自主呼吸，请参考无意识有自主呼吸的相关急救章节。
+			<h4>2.尽快拨打120</h4>　　如果有自主呼吸，请参考无意识有自主呼吸的如果有自主呼吸，请参考无意识有自主呼吸的相关急救章节。
 			<h4>3.如果没有自主呼吸，立即开始胸外按压。一只手的掌根放在患者胸部正中，双手重叠十指相扣，掌心翘起垂直按压</h4>
 	<hr />
 			<h4>常见问题</h4>
