--- a/precaution/chemistry.html
+++ b/precaution/chemistry.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 	<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../precaution.html"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav"href="../precaution.html"></a>
 			<h1 class="mui-title">化学紧急事故</h1>
 	</header>
 	<div class="mui-content">
@@ -38,7 +38,7 @@
 	</div>
 	<div>
 	<h4>相关急救</h4><hr />
-	中毒
+	<a href="../home/posioning.html">中毒</a>
 	</div>
 	</body>
 </html>
