--- a/precaution/earthquake.html
+++ b/precaution/earthquake.html
@@ -40,7 +40,8 @@
 	2、应付余震的措施。如果感觉到余震，蹲下，遮蔽住头部和躯干，不要动。<br />
 	3、远离坍塌区域，检查门窗，地板等是否有损坏。
 	<h4>相关急救</h4><hr />
-	骨折
+	<a href="../home/broken_bone.html">骨折</a>
 	</div>
+	<script type="text/javascript" src="../js/index.js" ></script>
 	</body>
 </html>
