--- a/precaution/everyday.html
+++ b/precaution/everyday.html
@@ -32,8 +32,7 @@
 	<h4>事发时</h4><hr />
 	1、随时准备帮助别人，尽管有时你不确定该怎么做些什么，还是要提供帮助。<br />	
 	2、深呼吸使自己平静下来。<br/>
-	3、如果不知道怎么做，给急救中心打电话。<hr />
-
+	3、如果不知道怎么做，给急救中心打电话。
 	</div>
 	</body>
 </html>
