--- a/precaution/fire.html
+++ b/precaution/fire.html
@@ -30,7 +30,7 @@
 	<h4>事发时</h4><hr />
 	1、迅速撤离火灾现场，拨打119。<br />	
 	2、如果被火困住，尽量趴在地板上，用湿布捂住口鼻。<br/>
-	3、如果衣服被烧着，不要奔跑，应躺下打滚以熄灭身上的火焰。<hr />
+	3、如果衣服被烧着，不要奔跑，应躺下打滚以熄灭身上的火焰。
 	</div>
 	</body>
 </html>
