--- a/precaution/flood.html
+++ b/precaution/flood.html
@@ -32,11 +32,8 @@
 	<h4>回家措施</h4><hr />
 	1、确认政府宣布该地区安全了，了解医疗机构是否恢复运转。<br />
 	2、检查电线是否完整，煤气管是否破损等。<br/>
-	3、丢掉接触过洪水和泥浆的食物和密封包装的食物和水。<hr />
+	3、丢掉接触过洪水和泥浆的食物和密封包装的食物和水。
 	</div>
-	<div>
-	<h4>相关急救</h4><hr />
-	水上安全
-	</div>
+	
 	</body>
 </html>
