--- a/precaution/servercold.html
+++ b/precaution/servercold.html
@@ -27,7 +27,7 @@
 	<hr />
 	<h4>严寒来临时措施</h4><hr />
 	1、如非必须外出，请留在家中。<br />	
-	2、外出请多穿厚衣服，还有防水靴。<hr />
+	2、外出请多穿厚衣服，还有防水靴。
 	</div>
 	</body>
 </html>
