--- a/precaution/severeheat.html
+++ b/precaution/severeheat.html
@@ -28,7 +28,7 @@
 	<h4>热浪袭击中措施</h4><hr />
 	1、即使不渴，也要持续补水。<br />	
 	2、不要喝酒，酒精会导致脱水。<br/>
-	3、吃营养均衡的清淡食品。<hr />
+	3、吃营养均衡的清淡食品。
 	
 	</div>
 	</body>
