--- a/precaution/volcano.html
+++ b/precaution/volcano.html
@@ -34,7 +34,7 @@
 	<h4>火山爆发后：室外措施</h4><hr />
 	1、遮盖好抠鼻，穿长袖衣裤，以防灰尘刺激。还要戴防护眼镜。<br />
 	2、清理屋顶积灰，积灰非常重，可能导致建筑物坍塌。<br/>
-	3、在政府部门宣布室外已安全前，留在室内。<hr />
+	3、在政府部门宣布室外已安全前，留在室内。
 	</div>
 	</body>
 </html>
