--- a/home.html
+++ b/home.html
@@ -5,176 +5,188 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<!--适应移动端-->
-		<script src="js/mui.min.js"></script>
-		<script type="text/javascript" charset="utf-8">
-			mui.init();
-		</script>
 		<link href="css/mui.min.css" rel="stylesheet" />
 	</head>
+
 	<body>
-		<div class="mui-slider">
-			<div class="mui-slider-group mui-slider-loop">
-				<!--    支持循环，需要重复图片节点-->
-				<div class="mui-slider-item mui-slider-item-duplicate">
-					<a href="#"><img src="imgs/yanlian1 (4).jpg" /></a>
-				</div>
-				<div class="mui-slider-item">
-					<a href="#"><img src="imgs/yanlian1 (1).jpg" /></a>
-				</div>
-				<div class="mui-slider-item">
-					<a href="#"><img src="imgs/yanlian1 (2).jpg" /></a>
-				</div>
-				<div class="mui-slider-item">
-					<a href="#"><img src="imgs/yanlian1 (3).jpg" /></a>
-				</div>
-				<div class="mui-slider-item">
-					<a href="#"><img src="imgs/yanlian1 (4).jpg" /></a>
-				</div>
-				<!--支持循环，需要重复图片节点-->
-				<div class="mui-slider-item mui-slider-item-duplicate">
-					<a href="#"><img src="imgs/yanlian1 (1).jpg" /></a>
+		<div class="mui.content">
+			<div class="mui-slider">
+				<div class="mui-slider-group mui-slider-loop">
+					<!--    支持循环，需要重复图片节点-->
+					<div class="mui-slider-item mui-slider-item-duplicate">
+						<a href="#"><img src="imgs/yanlian1 (4).jpg" /></a>
+					</div>
+					<div class="mui-slider-item">
+						<a href="#"><img src="imgs/yanlian1 (1).jpg" /></a>
+					</div>
+					<div class="mui-slider-item">
+						<a href="#"><img src="imgs/yanlian1 (2).jpg" /></a>
+					</div>
+					<div class="mui-slider-item">
+						<a href="#"><img src="imgs/yanlian1 (3).jpg" /></a>
+					</div>
+					<div class="mui-slider-item">
+						<a href="#"><img src="imgs/yanlian1 (4).jpg" /></a>
+					</div>
+					<!--支持循环，需要重复图片节点-->
+					<div class="mui-slider-item mui-slider-item-duplicate">
+						<a href="#"><img src="imgs/yanlian1 (1).jpg" /></a>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div>
-			<ul id='list' class="mui-table-view mui-table-view-chevron">
-				<li class="mui-table-view-cell mui-media">
-					<a id="allergy" href="home/allergy.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/allergy.png">
-						<div class="mui-media-body">
-							过敏反应
-							<p class='mui-ellipsis'>患者手、足面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/asthma.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/asthma.png">
-						<div class="mui-media-body">
-							哮喘发作
-							<p class='mui-ellipsis'>帮助患者安坐，助其服药.安抚患者。如果哮喘症状加重，患者未随身带药物或者服药后病情并未缓解</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/bleeding.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/bleeding_newgrey.png">
-						<div class="mui-media-body">
-							出血
-							<p class='mui-ellipsis'>寻找周围的何时物品按压伤口</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/broken_bone.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/broken_bone_newgrey.png">
-						<div class="mui-media-body">
-							骨折
-							<p class='mui-ellipsis'>鼓励伤者用手，及衬垫、衣物等扶持固定骨折处</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/fire.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/fire_newgrey.png">
-						<div class="mui-media-body">
-							烧烫伤
-							<p class='mui-ellipsis'>用流动的冷水冲洗烧烫伤部位.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/heartattack.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/heartattack_grey.png">
-						<div class="mui-media-body">
-							心脏病发作
-							<p class='mui-ellipsis'>烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/severheat.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/severeheat_newgrey.png">
-						<div class="mui-media-body">
-							中暑
-							<p class='mui-ellipsis'>患者皮肤灼热、发红，可能干燥，也可能潮湿。.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/stings_bites.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/stings_bites_grey.png">
-						<div class="mui-media-body">
-							蛰伤和咬伤
-							<p class='mui-ellipsis'>昆虫蛰伤或叮咬可以导致严重的损伤或疾病.</p>
-						</div>
-					</a>
-				</li>
+			
+				<ul id='list' class="mui-table-view mui-table-view-chevron">
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/allergy.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/allergy.png">
+							<div class="mui-media-body">
+								过敏反应
+								<p class='mui-ellipsis'>患者手、足面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢.</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/asthma.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/asthma.png">
+							<div class="mui-media-body">
+								哮喘发作
+								<p class='mui-ellipsis'>帮助患者安坐，助其服药.安抚患者。如果哮喘症状加重，患者未随身带药物或者服药后病情并未缓解</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/bleeding.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/bleeding_newgrey.png">
+							<div class="mui-media-body">
+								出血
+								<p class='mui-ellipsis'>寻找周围的何时物品按压伤口</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/broken_bone.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/broken_bone_newgrey.png">
+							<div class="mui-media-body">
+								骨折
+								<p class='mui-ellipsis'>鼓励伤者用手，及衬垫、衣物等扶持固定骨折处</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/fire.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/fire_newgrey.png">
+							<div class="mui-media-body">
+								烧烫伤
+								<p class='mui-ellipsis'>用流动的冷水冲洗烧烫伤部位.</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/heartattack.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/heartattack_grey.png">
+							<div class="mui-media-body">
+								心脏病发作
+								<p class='mui-ellipsis'>烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/severheat.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/severeheat_newgrey.png">
+							<div class="mui-media-body">
+								中暑
+								<p class='mui-ellipsis'>患者皮肤灼热、发红，可能干燥，也可能潮湿。.</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/stings_bites.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/stings_bites_grey.png">
+							<div class="mui-media-body">
+								蛰伤和咬伤
+								<p class='mui-ellipsis'>昆虫蛰伤或叮咬可以导致严重的损伤或疾病.</p>
+							</div>
+						</a>
+					</li>
 
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/posioning.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/poisoning_harmful_substances_newgrey.png">
-						<div class="mui-media-body">
-							中毒
-							<p class='mui-ellipsis'>了解中毒者服用了什么东西，什么时候服用，服用了多少.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/distress.html">
-						<img class="mui-media-object mui-pull-left" src='imgs/distress_shock_grey.png'>
-						<div class="mui-media-body">
-							休克
-							<p class='mui-ellipsis'>可根据下列症状判断患者是否处于休克状态：心神不宁.</p>
-						</div>
-					</a>
-				</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/posioning.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/poisoning_harmful_substances_newgrey.png">
+							<div class="mui-media-body">
+								中毒
+								<p class='mui-ellipsis'>了解中毒者服用了什么东西，什么时候服用，服用了多少.</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/distress.html">
+							<img class="mui-media-object mui-pull-left" src='imgs/distress_shock_grey.png'>
+							<div class="mui-media-body">
+								休克
+								<p class='mui-ellipsis'>可根据下列症状判断患者是否处于休克状态：心神不宁.</p>
+							</div>
+						</a>
+					</li>
 
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/stroke.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/stroke_newgrey.png">
-						<div class="mui-media-body">
-							中风
-							<p class='mui-ellipsis'>牢记FAST.脸部(face)：是否一侧面瘫？胳膊(arms).</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/strain.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/strain_sprains_newgrey.png">
-						<div class="mui-media-body">
-							扭伤和拉伤
-							<p class='mui-ellipsis'>记住RICE:休息(Rest)、固定(Immobilize)、冷敷（Cold)</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/unconcious.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/unconciousbreathing_newgrey.png">
-						<div class="mui-media-body">
-							无意识有自主呼吸
-							<p class='mui-ellipsis'>使患者头部后仰，通过观察和感觉判断是否有呼吸</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="home/unconcious2.html">
-						<img class="mui-media-object mui-pull-left" src="imgs/unconciousnotbreathing_newgrey.png">
-						<div class="mui-media-body">
-							无意识无自主呼吸
-							<p class='mui-ellipsis'>使患者头部后仰，观察是否有自主呼吸。尽快拨打120</p>
-						</div>
-					</a>
-				</li>
-			</ul>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/stroke.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/stroke_newgrey.png">
+							<div class="mui-media-body">
+								中风
+								<p class='mui-ellipsis'>牢记FAST.脸部(face)：是否一侧面瘫？胳膊(arms).</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/strain.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/strain_sprains_newgrey.png">
+							<div class="mui-media-body">
+								扭伤和拉伤
+								<p class='mui-ellipsis'>记住RICE:休息(Rest)、固定(Immobilize)、冷敷（Cold)</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/unconcious.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/unconciousbreathing_newgrey.png">
+							<div class="mui-media-body">
+								无意识有自主呼吸
+								<p class='mui-ellipsis'>使患者头部后仰，通过观察和感觉判断是否有呼吸</p>
+							</div>
+						</a>
+					</li>
+					<li class="mui-table-view-cell mui-media">
+						<a href="home/unconcious2.html">
+							<img class="mui-media-object mui-pull-left" src="imgs/unconciousnotbreathing_newgrey.png">
+							<div class="mui-media-body">
+								无意识无自主呼吸
+								<p class='mui-ellipsis'>使患者头部后仰，观察是否有自主呼吸。尽快拨打120</p>
+							</div>
+						</a>
+					</li>
+
+				</ul>
+			
 		</div>
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack: true
-			})
-       </script>
-	
-    
+		<script src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="UTF-8">
+			var first = null;
+			mui.back = function() {
+				//首次按键，提示‘再按一次退出应用’
+				if (!first) {
+					first = new Date().getTime();
+					mui.toast('再按一次退出应用');
+					setTimeout(function() {
+						first = null;
+					}, 1000);
+				} else {
+					if (new Date().getTime() - first < 1000) {
+						plus.runtime.quit();
+					}
+				}
+			};
+			
+		</script>
 	</body>
 
 </html>
