--- a/precaution.html
+++ b/precaution.html
@@ -5,11 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<!--适应移动端-->
-		<script src="js/mui.min.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" charset="utf-8">
-			mui.init();
-		</script>
+
 	</head>
 
 	<body>
@@ -31,7 +28,7 @@
 				<div class="mui-slider-item">
 					<a href="#"><img src="imgs/pre1.jpg" /></a>
 				</div>
-				
+
 				<!--支持循环，需要重复图片节点-->
 				<div class="mui-slider-item mui-slider-item-duplicate">
 					<a href="#"><img src="imgs/pre4.jpg" /></a>
@@ -53,7 +50,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/earthquake_newgrey.png">
 						<div class="mui-media-body">
 							地震
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -61,7 +58,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/everyday_newgrey.png">
 						<div class="mui-media-body">
 							日常突发事件
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -77,7 +74,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/flood_newgrey.png">
 						<div class="mui-media-body">
 							洪水
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -93,7 +90,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/severeheat_newgrey.png">
 						<div class="mui-media-body">
 							热浪
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -101,7 +98,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/tsunami_newgrey.png">
 						<div class="mui-media-body">
 							海啸
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -109,7 +106,7 @@
 						<img class="mui-media-object mui-pull-left" src="imgs/volcano_grey.png">
 						<div class="mui-media-body">
 							火山
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
@@ -121,11 +118,25 @@
 					</a>
 				</li>
 			</ul>
-			</div>	
+		</div>
+		<script src="js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack: true
-			})
+				var first = null;
+			mui.back = function() {
+		//首次按键，提示‘再按一次退出应用’
+		if (!first) {
+		first = new Date().getTime();
+		mui.toast('再按一次退出应用');
+		setTimeout(function() {
+		first = null;
+		}, 1000);
+		} else {
+		if (new Date().getTime() - first < 1000) {
+		plus.runtime.quit();
+		}
+		}
+		};
 		</script>
 	</body>
+
 </html>
