--- a/home/heartattack.html
+++ b/home/heartattack.html
@@ -20,10 +20,12 @@
 			<h1 class="mui-title">心脏病突发</h1>
 		</header>
 		<div class="mui-content">
+			<div class="mui-content-padded">
 			<h4>1.患者可以感觉到持续的胸部压榨样疼痛，上臂、颈部、下颌、背部或者胃部出现孤立的难以描述的不适感</h4> 　　这种 疼痛是因为心肌供血被阻断造成的，切休息后不能缓解。
 			<h4>2.尽快拨打120，或者请别人帮忙拨打</h4>
 			<h4>3.只要没有禁忌，立即服用阿司匹林</h4>
 				<hr />
+				</div>
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
