--- a/home/stroke.html
+++ b/home/stroke.html
@@ -20,13 +20,15 @@
 			<h1 class="mui-title">中风</h1>
 		</header>
 		<div class="mui-content">
+			<div class="mui-content-padded">
 			<h4>1.记住F.A.S.T。面部(Face)：是否一侧面瘫？胳膊(Arms)：两个胳膊能同时抬起来吗？说话(Speech):
 			说话时吐字表达清晰吗?时间(Time):马上拨打120</h4> 　　中风是脑供血中断造成的。部分脑组织受损，继而影响患者的外貌、身体机能、说话和视力。
 			<h4>2.尽快拨打120</h4>
 			<h4>3.等候救护车时，安抚患者</h4>
-		<hr />
+		<hr /></div>
 			<h4>常见问题</h4>
 			<hr />
+			
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">中风的其他症状</a>
