--- a/home/unconcious.html
+++ b/home/unconcious.html
@@ -21,11 +21,13 @@
 			<h1 class="mui-title">无意识有自主呼吸</h1>
 		</header>
 		<div class="mui-content">
+			<div class="mui-content-padded">
 			<img style="height: auto;width:100%" src="../imgs/unconcious.jpg"/>
 			<h4>1.使患者头部后仰通过观察和感觉，判断是否有呼吸</h4> 　　当患者出现意识丧失，此时肌肉松弛，舌堵塞气道，造成无法呼吸。
 			<h4>2.让患者侧卧，头部后仰</h4>
 			<h4>3.尽快拨打120</h4>
 		<hr />
+		</div>
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
