--- a/precaution/chemistry.html
+++ b/precaution/chemistry.html
@@ -14,10 +14,11 @@
 	</head>
 	<body>
 	<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav"href="../precaution.html"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../precaution.html"></a>
 			<h1 class="mui-title">化学紧急事故</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	化学紧急事故是现代生活的产物。不管是家里、路上或工作场所发生的意外，还是恐怖袭击，我们都该知道怎么做。<hr />
 	
 	<h4>事前预防</h4><hr />
@@ -25,18 +26,18 @@
 	2、不要把洗涤用品或家庭化学品放入饮料瓶中。避免造成误饮。<br />
 	3、化学品溅撒应立即用抹布清理，并保存好眼睛和皮肤。抹布置于室外安全地点挥发。<br />
 	丢弃时应用报纸包裹,置入塑料袋封严。<hr />
-	</div>
+
 
 	<h4>事发时</h4><hr />
 	1、除非你得到医疗专家的指导，不要给患者吃、喝任何东西。<br />	
 	2、保留化学品标签。<hr />
-	</div>
-	<div>
+	
+	
 	<h4>重大化学紧急事故</h4><hr />
 	1、如果危险化学品泄漏到环境中，留意收听广播或看电视新闻。<br />
 	2、如果在家里，关掉暖气和空调，用胶带封住门窗和出风口。<hr />
-	</div>
-	<div>
+	
+	
 	<h4>相关急救</h4><hr />
 	<a href="../home/posioning.html">中毒</a>
 	</div>
