--- a/precaution/earthquake.html
+++ b/precaution/earthquake.html
@@ -19,6 +19,7 @@
 			<h1 class="mui-title">地震</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	地震会造成大规模的破坏，地震时大地摇动，导致建筑物倒塌。本节主要学习在地震前和地震中怎么做。<hr />
 
 	<h4>震前措施</h4><hr />
@@ -41,6 +42,7 @@
 	3、远离坍塌区域，检查门窗，地板等是否有损坏。
 	<h4>相关急救</h4><hr />
 	<a href="../home/broken_bone.html">骨折</a>
+	</div>
 	</div>
 	<script type="text/javascript" src="../js/index.js" ></script>
 	</body>
