--- a/precaution/everyday.html
+++ b/precaution/everyday.html
@@ -19,6 +19,7 @@
 			<h1 class="mui-title">日常突发情况</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	事故和突发事件可能发生在任何人身上，发生在任何地方，任何时间。从楼梯上跌落、野餐时被
 	烧伤都有可能，故应为每天的突发事件做好准备。<hr />
 
