--- a/precaution/fire.html
+++ b/precaution/fire.html
@@ -19,6 +19,7 @@
 			<h1 class="mui-title">火灾</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 		<img style="height: auto;width:100%" src="../imgs/huozai.jpg"/>
 	家庭和公共场所应安装烟雾报警器，平时应定期进行火灾逃生预案演练。这样可以有效保障生命安全。
 	
