--- a/precaution/tsunami.html
+++ b/precaution/tsunami.html
@@ -18,6 +18,7 @@
 			<h1 class="mui-title">海啸</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 		<img style="height: auto;width:100%" src="../imgs/tsunami.jpg"/>
 	海啸是由海地大地震或者巨大崩塌陷落海洋造成的一系列大海浪。强震之后的数分钟内，
 	海啸能够伤及海滩上或者近海低地处的人们。一次大地震后，海啸危险期可能持续数小时。
