--- a/precaution/volcano.html
+++ b/precaution/volcano.html
@@ -18,6 +18,7 @@
 			<h1 class="mui-title">火山爆发</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	火山爆发时，会向空中喷出岩石碎块和液体岩浆，以及大量气体。火山岩流可以出现在火山任何一侧，而火山灰则可以随风飘
 	落到近千公里之外，危害巨大的泥石流和洪水也可能在与火山相连的山谷中发生。
 	
