--- a/home/allergy.html
+++ b/home/allergy.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>过敏反应</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		
 		<style>
 			p {
 				text-indent: 22px;
@@ -14,22 +12,23 @@
 			}
 		</style>
 	</head>
-
 	<body>
-
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="../home.html"></a>
 			<h1 class="mui-title">过敏反应</h1>
 		</header>
 		<div class="mui-content">
+				<div class="mui-content-padded">
 			<h4>1.患者手、足或面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢</h4> 　　也可能出现呕吐和腹泻状况，引起过敏反应的常见过敏原有花粉、蚊虫叮咬、乳胶，还有一些食物，如坚果或者奶制品。
 
 			<h4>2.如果有人发生过敏反应，请拨打120</h4> 　　如果有人发生过敏反应（呼吸困难、休克、或者精神异常），并带有自动注射器，请帮助他们用药。
 
 			<h4>3.等候救护车时，请持续观察并安抚患者</h4>
 		<hr />
+		</div>
 			<h4>常见问题</h4>
 			<hr />
+			
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="#;">什么是过敏休克? </a>
@@ -57,6 +56,7 @@
 				</li>
 			</ul>
 		</div>
+		<!--<script src="../js/mui.min.js"></script>-->
 		<script>
 		function plusReady(){
 ws=plus.webview.currentWebview();
