--- a/home/asthma.html
+++ b/home/asthma.html
@@ -13,11 +13,10 @@
 		</style>
 	</head>
 	<body>
-		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">哮喘发作</h1>
+		<header id="header" class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="../home.html"></a>
+			<h1 class="mui-title">哮喘发作</h1>
 		</header>
-
 		<div class="mui-content">
 			<h4>1.帮助患者安坐，助其服药</h4> 　　患者哮喘发作时，气道收缩变窄导致呼吸困难，使用平喘气雾剂舒张气道平滑肌，气道得以扩张从而缓解呼吸困难。
 			<h4>2.安抚患者。如果哮喘症状加重，请拨打120</h4> 　　轻微的哮喘发作几分钟之内会自行缓解。如果不能自行缓解或气雾剂无效，请拨打120。
