--- a/home/broken_bone.html
+++ b/home/broken_bone.html
@@ -20,10 +20,12 @@
 			<h1 class="mui-title">骨折</h1>
 		</header>
 		<div class="mui-content">
+			<div class="mui-content-padded">
 			<h4>1.鼓励伤者用手以及衬垫、衣物等扶持固定患肢，避免不必要的移动</h4> 　　按压伤口，可帮助血液凝固，并止血。
 			<h4>2.如果患处明显变形，剧烈疼痛，需要运送至医院，应拨打120或者请他人帮忙呼叫</h4>
 			<h4>3.确保患处固定，直到医护人员抵达。</h4>
 		<hr />
+		</div>
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
