--- a/information/course.html
+++ b/information/course.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" ></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="../information.html" ></a>
 			<h1 class="mui-title">急救课程</h1>
 		</header>
 		<div class="mui-content">
@@ -30,6 +30,6 @@
 				010-65281899
 	</div>
 	</div>
-	<script type="text/javascript" src="../js/index.js" ></script>
+	
 	</body>
 </html>
