--- a/precaution/flood.html
+++ b/precaution/flood.html
@@ -18,6 +18,7 @@
 			<h1 class="mui-title">洪水</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	洪水是最常见也是造成损失最大的自然灾害之一，它多有暴雨或者长达数小时甚至数天的连续降雨导致。
 	山洪这是因为河流或者低洼地区的水位急剧上升导致的。
 	<h4>洪水发生前措施</h4><hr />
@@ -33,6 +34,7 @@
 	1、确认政府宣布该地区安全了，了解医疗机构是否恢复运转。<br />
 	2、检查电线是否完整，煤气管是否破损等。<br/>
 	3、丢掉接触过洪水和泥浆的食物和密封包装的食物和水。
+	</div>
 	</div>
 	
 	</body>
