--- a/precaution/food.html
+++ b/precaution/food.html
@@ -19,6 +19,7 @@
 			<h1 class="mui-title">食品安全</h1>
 	</header>
 	<div class="mui-content">
+		<div class="mui-content-padded">
 	灾害中和灾后的食品可能不安全。当地政府卫生机构会告诉灾害区域内的公众如何对水加热或做其他处理。
 	<h4>怎么处理水</h4><hr />
 	1、安全的方法是烧开水，能杀灭致病菌和寄生虫。<br />
