--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 							<img class="mui-media-object mui-pull-left" src="imgs/bleeding_newgrey.png">
 							<div class="mui-media-body">
 								出血
-								<p class='mui-ellipsis'>寻找周围的何时物品按压伤口</p>
+								<p class='mui-ellipsis'>寻找周围的合适物品按压伤口</p>
 							</div>
 						</a>
 					</li>
